[package]
name = "pincers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pincers"

[lib]
name = "pincers"
doc = true
document-private-items = true

[dependencies]
anyhow = "1.0.96"
bounded-integer = { version = "0.5.8", features = ["num-traits02", "serde1", "types"] }
clap = { version = "4.5.29", features = ["derive"] }
fs2 = "0.4.3"
humanize-bytes = "1.0"
itertools = "0.8.0"
mediatype = { version = "0.21.0", features = ["serde"] }
nom = "8.0.0"
os_pipe = "1.2.1"
serde = { version = "1.0.217", features = ["derive"] }
spdlog-rs = { version = "0.4.1", features = ["release-level-info", "level-trace"] }
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "rt", "signal", "sync"] }
tokio-unix-ipc = { version = "0.3.0", features = ["serde"], git = "https://github.com/mitsuhiko/tokio-unix-ipc.git" }
tokio-util = "0.7.13"
wayland-client = "0.31.8"
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
